feat: enhance security, implement ShowTime CRUD, and refactor API endpoints - Configure CORS and optimize SecurityFilter to use JWT claims - Implement CRUD operations and DTOs for ShowTime management - Refactor MovieController to return DTOs and add get-by-id endpoint - Add password encoding and validation to AuthController - Add occupied seats endpoint to ReservationController - Update CinemaRoom model and endpoints