@@ -11,6 +11,7 @@ import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ShowTimeService {
@@ -21,17 +22,30 @@ public class ShowTimeService {
     private final ModelMapper modelMapper;
 
 
-    public ShowTimeService(ShowTimeRepository showTimeRepository, MovieRepository movieRepository, CinemaRoomRepository cinemaRoomRepository, ModelMapper modelMapper) {
+    public ShowTimeService(ShowTimeRepository showTimeRepository, MovieRepository movieRepository, CinemaRoomRepository cinemaRoomRepository) {
         this.showTimeRepository = showTimeRepository;
         this.movieRepository = movieRepository;
         this.cinemaRoomRepository = cinemaRoomRepository;
-        this.modelMapper = modelMapper;
+        this.modelMapper =  new ModelMapper();
     }
 
     public List<ShowTimeDTO> getAllShowTimes(){
         return showTimeRepository.findAll().stream()
-                .map(showTime -> modelMapper.map(showTime, ShowTimeDTO.class))
-                .toList();
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    public ShowTimeDTO getShowTimeById(Long id){
+        ShowTime showTime = showTimeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("ShowTime not found"));
+        return convertToDto(showTime);
+    }
+
+    public List<ShowTimeDTO> getShowTimesByMovieId(Long id){
+        List<ShowTime> showTimes = showTimeRepository.getShowTimesByMovie_Id(id);
+        return showTimes.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
     }
 
     public ShowTime saveShowTime(ShowTimeDTO showTimeDTO){
@@ -50,6 +64,24 @@ public class ShowTimeService {
         return showTimeRepository.save(showTime);
     }
 
+    public ShowTime updateShowTime(Long id, ShowTimeDTO showTimeDTO) {
+        ShowTime existingShowTime = showTimeRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("ShowTime not found"));
+
+        Movie movie = movieRepository.findById(showTimeDTO.getMovieId())
+                .orElseThrow(() -> new RuntimeException("Movie not found"));
+
+        CinemaRoom cinemaRoom = cinemaRoomRepository.findById(showTimeDTO.getCinemaRoomId())
+                .orElseThrow(() -> new RuntimeException("Cinema room not found"));
+
+        existingShowTime.setMovie(movie);
+        existingShowTime.setCinemaRoom(cinemaRoom);
+        existingShowTime.setDate(showTimeDTO.getDate());
+        existingShowTime.setPrice(showTimeDTO.getPrice());
+
+        return showTimeRepository.save(existingShowTime);
+    }
+
     public void deleteShowTime(Long showTimeId){
         if (!showTimeRepository.existsById(showTimeId)){
             throw new RuntimeException("ShowTime not found");
@@ -58,4 +90,15 @@ public class ShowTimeService {
         showTimeRepository.deleteById(showTimeId);
     }
 
+    private ShowTimeDTO convertToDto(ShowTime showTime) {
+        ShowTimeDTO dto = new ShowTimeDTO();
+        dto.setId(showTime.getId());
+        dto.setPrice(showTime.getPrice());
+        dto.setDate(showTime.getDate());
+        dto.setMovieId(showTime.getMovie().getId());
+        dto.setMovieTitle(showTime.getMovie().getTitle());
+        dto.setCinemaRoomId(showTime.getCinemaRoom().getId());
+        dto.setRoomName(showTime.getCinemaRoom().getName());
+        return dto;
+    }
 }
